--- a/index.html
+++ b/index.html
@@ -1,37 +1,59 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Personal Web</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
+        <link rel="icon" type="image/png" href="./image/emyu.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <title>Emyu Landing Page</title>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div style="
-            width: 350px;
-            border: 1px solid black; 
-            margin: 90px auto; 
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px #cecece; 
-        ">
-          <img src="./image/IMG_9387.JPG" style="width: 100%; border-radius: 10px;" alt="freddy_sombrero" />
-          <h1>Freddy Sombrero</h1>
-          <p>I am the strongest person in Indonesia, even government afraid of me.</p>
-
-          <table style="
-            border: 3px double black;
-            width: 100%;
-            text-align: center;
-            border-collapse: collapse;
-            margin-bottom: 10px;
-          ">
-            <tr style="border: 1px solid black;">
-                <th style="border: 1px solid black;">Experience</th>
-                <th style="border: 1px solid black;">Year</th>
-            </tr>
-            <tr style="border: 1px solid black;">
-                <td style="border: 1px solid black;">Police Officer</td>
-                <td style="border: 1px solid black;">2016</td>
-            </tr>
-          </table>
-
+        <div class="container">
+          <div class="welcome">
+            <h1>Hi I'm Rahmat Kurniawan</h1>
+            <p class="title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora rem officiis placeat, repudiandae consequatur temporibus incidunt asperiores fugiat accusantium sint consequuntur quaerat cupiditate neque fuga vel, dicta odio vitae itaque, quod molestias. Odio sit aut enim numquam magni alias, quasi vel odit laborum impedit quo maiores autem aliquam corporis nihil.</p>
+            <p class="button">
+              <a href="#" class="white">contact</a>
+            </p>
+            <a href="#" download="CV Rahmat Kurniawan">
+              <p>download CV</p>
+              <i class="fa-solid fa-download"></i>
+            </a>
+          </div>
+          <div class="social-media">
+            <div class="icon">
+              <a href="https://www.linkedin.com/in/rahmat-kurniawan-a059b7125/" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </div>
+            <div class="icon">
+              <a href="https://instagram.com/kurniawanrahmat_?igshid=NGVhN2U2NjQ0Yg==" target="_blank">
+                <i class="fa-brands fa-square-instagram"></i>
+              </a>
+            </div>
+            <div class="icon">
+              <!-- my facebook got hacked -->
+              <a href="#">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+            </div>
+            <div class="icon">
+              <a href="https://twitter.com/kurniawanrahmt_" target="_blank">
+                <i class="fa-brands fa-square-twitter"></i>
+              </a>
+            </div>
+          </div>
+          <div class="photo-card">
+            <div class="thumb">
+              <img src="./image/my_profil.JPG" alt="Avatar Picture">
+            </div>
+            <div class="title">
+              <h1>Rahmat Kurniawan</h1>
+              <p>Fullstack Developer</p>
+            </div>
+          </div>
         </div>
     </body>
 </html>
