--- a/index.html
+++ b/index.html
@@ -8,50 +8,73 @@
         <title>Emyu Landing Page</title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
         <link href="./css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="./css/contact.css">
     </head>
     <body>
-        <div class="container">
-          <div class="welcome">
-            <h1>Hi I'm Rahmat Kurniawan</h1>
-            <p class="title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora rem officiis placeat, repudiandae consequatur temporibus incidunt asperiores fugiat accusantium sint consequuntur quaerat cupiditate neque fuga vel, dicta odio vitae itaque, quod molestias. Odio sit aut enim numquam magni alias, quasi vel odit laborum impedit quo maiores autem aliquam corporis nihil.</p>
-            <p class="button">
-              <a href="#" class="white">contact</a>
-            </p>
-            <a href="#" download="CV Rahmat Kurniawan">
-              <p>download CV</p>
-              <i class="fa-solid fa-download"></i>
-            </a>
+        <nav>
+          <div class="nav-left">
+              <ul>
+                  <li>
+                      <img src="image/logo.png" alt="logo" />
+                  </li>
+                  <li>
+                      <a class="active" href="index.html">Home</a>
+                  </li>
+                  <li>
+                      <a href="#">Blog</a>
+                  </li>
+              </ul>
           </div>
-          <div class="social-media">
-            <div class="icon">
-              <a href="https://www.linkedin.com/in/rahmat-kurniawan-a059b7125/" target="_blank">
-                <i class="fa-brands fa-linkedin"></i>
-              </a>
-            </div>
-            <div class="icon">
-              <a href="https://instagram.com/kurniawanrahmat_?igshid=NGVhN2U2NjQ0Yg==" target="_blank">
-                <i class="fa-brands fa-square-instagram"></i>
-              </a>
-            </div>
-            <div class="icon">
-              <!-- my facebook got hacked -->
-              <a href="#">
-                <i class="fa-brands fa-facebook"></i>
-              </a>
-            </div>
-            <div class="icon">
-              <a href="https://twitter.com/kurniawanrahmt_" target="_blank">
-                <i class="fa-brands fa-square-twitter"></i>
-              </a>
-            </div>
+          <div class="nav-right">
+              <a href="contact.html">Contact Me</a>
           </div>
-          <div class="photo-card">
-            <div class="thumb">
-              <img src="./image/my_profil.JPG" alt="Avatar Picture">
+        </nav>
+        <div class="outer-container">
+          <div class="container">
+            <div class="welcome">
+              <h1>Hi I'm Rahmat Kurniawan</h1>
+              <p class="title">Productive employee with a history of working in the Consumer Goods and E-Commerce retail. Have skills in sales and marketing and have the ability in the field of sales and marketing as well as good knowledge of conditions in the market regarding a product to be offered and also have a strategy to deal with problems in the market through leadership and team motivation. Works with clients to determine requirements and provide excellent service.</p>
+              <div class="wrapper-contact-download">
+                <p class="button">
+                  <a href="./contact.html" class="white">contact</a>
+                </p>
+                <a href="#" download="CV Rahmat Kurniawan">
+                  <p>download CV</p>
+                  <i class="fa-solid fa-download"></i>
+                </a>
+              </div>
+              <div class="social-media">
+                <div class="icon">
+                  <a href="https://www.linkedin.com/in/rahmat-kurniawan-a059b7125/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                  </a>
+                </div>
+                <div class="icon">
+                  <a href="https://instagram.com/kurniawanrahmat_?igshid=NGVhN2U2NjQ0Yg==" target="_blank">
+                    <i class="fa-brands fa-square-instagram"></i>
+                  </a>
+                </div>
+                <div class="icon">
+                  <!-- my facebook got hacked -->
+                  <a href="#">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                </div>
+                <div class="icon">
+                  <a href="https://twitter.com/kurniawanrahmt_" target="_blank">
+                    <i class="fa-brands fa-square-twitter"></i>
+                  </a>
+                </div>
+              </div> 
             </div>
-            <div class="title">
-              <h1>Rahmat Kurniawan</h1>
-              <p>Fullstack Developer</p>
+            <div class="photo-card">
+              <div class="thumb">
+                <img src="./image/my_profil.JPG" alt="Avatar Picture">
+              </div>
+              <div class="title">
+                <h1>Rahmat Kurniawan</h1>
+                <p>Fullstack Developer</p>
+              </div>
             </div>
           </div>
         </div>
