--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,10 @@
                 </div>
 
                 <div>
-                    <button>Submit</button>
+                    <button type="button" onclick="submitData()">Submit</button>
                 </div>
             </form>
         </div>
+        <script src="./js/contact.js"></script>
     </body>
 </html>
