--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Blog</a>
+                        <a href="blog.html">Blog</a>
                     </li>
                 </ul>
             </div>
