add month diff function & checkbox utility

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
         <link rel="icon" type="image/png" href="./image/emyu.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         <title>Blog Detail</title>
-        <link rel="stylesheet" href="./css/blog.css">
+        <link rel="stylesheet" href="./css/blog_detail.css">
     </head>
     <body>
         <nav>
@@ -24,20 +27,51 @@
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
-        <div class="blog-detail">
-            <div class="blog-detail-container">
-                <h1>Pasar Coding di Indonesia Dinilai Masih Menjanjikan</h1>
-                <div class="author">12 Jul 2021 22:30 WIB | Ichsan Emrald Alamsyah</div>
-                <img src="image/blog-img-detail.png" alt="" />
-                <p>
-                Ketimpangan sumber daya manusia (SDM) di sektor digital masih menjadi
-                isu yang belum terpecahkan. Berdasarkan penelitian ManpowerGroup,
-                ketimpangan SDM global, termasuk Indonesia, meningkat dua kali lipat
-                dalam satu dekade terakhir. Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Quam, molestiae numquam! Deleniti maiores expedita
-                eaque deserunt quaerat! Dicta, eligendi debitis?
-                </p>
+        <div class="blog-detail" id="blog-detail-contents">
+            <!-- dynamic code would be here -->
+            <h1>Dumbways Web App</h1>
+            <div class="blog-detail-item">
+                <div class="thumb">
+                    <img src="./image/react code.jpeg" alt="Thumbnail">
+                </div>
+                <div class="information">
+                    <div class="information-items">
+                        <h5>Duration</h5>
+                        <div class="information-list">
+                            <div class="information-item">
+                                <i class="fa-solid fa-calendar-days"></i>
+                                <span>12 Jan 2021 - 11 Feb 2021</span>
+                            </div>
+                            <div class="information-item">
+                                <i class="fa-solid fa-clock"></i>
+                                <span>1 Month</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="information-items">
+                        <h5>Technologies</h5>
+                        <div class="information-list">
+                            <div class="information-item">
+                                <i class="fa-brands fa-node-js"></i>
+                                <span>Node Js</span>
+                            </div>
+                            <div class="information-item">
+                                <i class="fa-brands fa-react"></i>
+                                <span>React Js</span>
+                            </div>
+                            <div class="information-item">
+                                <img src="./image/Nextjs-logo.svg.png" class="next" alt="Next Js">
+                                <span>Next Js</span>
+                            </div>
+                            <div class="information-item">
+                                <img src="./image/Typescript_logo_2020.svg.png" alt="TypeScript">
+                                <span>TypeScript</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ex dolor nobis? Saepe dolorum aspernatur voluptates. A officiis autem quis delectus distinctio unde corporis inventore nisi sed vitae incidunt, necessitatibus corrupti officia praesentium possimus, in, quo doloribus iure! Nihil laboriosam doloremque eaque, quia ut reprehenderit culpa id quo et debitis similique unde aliquid nesciunt numquam voluptas quod minima qui doloribus at sunt officia assumenda provident? Veniam atque sapiente at hic rerum facere. Veniam nisi numquam expedita quidem minima autem eaque exercitationem iste voluptate. Accusamus vitae rerum ipsa consequatur natus dolores, reprehenderit labore hic ullam in, aperiam perspiciatis necessitatibus velit, maxime veniam aliquam amet laudantium quisquam. Fuga delectus laudantium, aspernatur quasi molestias, cupiditate ab amet cum eius nisi sint velit fugiat pariatur animi. Necessitatibus perferendis possimus maiores similique facilis numquam voluptatibus asperiores itaque sed assumenda, obcaecati hic aliquid provident explicabo eum soluta ad eaque consectetur dolore cum tempore minima. Dolores, sint corrupti. Laboriosam dignissimos amet itaque perspiciatis dolorem. Dicta eum quibusdam sunt libero quo dolore ipsam quidem atque quos maiores eligendi consequatur distinctio in modi dolor porro facere ut consequuntur, provident quisquam veritatis nam placeat? Error aliquid explicabo dicta exercitationem! Fugit perspiciatis quibusdam quasi. Ipsam quod explicabo quos, optio repellat expedita ipsum magni dignissimos totam nisi modi ad ipsa officiis. Dolorem rerum expedita optio repellat saepe voluptatem, voluptatum reprehenderit quia quos quibusdam iusto aspernatur labore incidunt doloribus, et non, consequuntur fuga! Aliquid optio blanditiis tenetur ratione veritatis ipsam impedit, dolorum, ducimus consequuntur itaque vero nobis enim sunt, eius ipsum minus ex dignissimos quisquam? Quos nulla quaerat numquam, facere sit amet! Officia voluptates inventore cumque modi nihil odit error perspiciatis mollitia quos quam velit earum dolorem, quod quo quae perferendis, repellendus dolor ipsum nesciunt omnis minima? Sit, harum. Eaque, ex saepe. Eligendi maxime nemo alias veniam dolorum dignissimos ratione praesentium ipsam aspernatur. Odio veniam minima sunt esse itaque iure ab commodi dolor perspiciatis distinctio, vitae libero corrupti rem obcaecati alias similique ut enim quidem accusantium molestiae, quasi eligendi. Sit possimus tempore ea, aspernatur natus excepturi recusandae commodi ipsa facere quos hic deleniti, laborum nisi odit quaerat sint esse nobis molestias quas perferendis dicta. Libero quas laudantium dolore dolorum reprehenderit soluta rem, harum veniam ducimus provident suscipit officiis, blanditiis natus, quis architecto dolores numquam quae repellat ipsa? Ea, provident itaque? Tempora, quaerat inventore esse eaque distinctio, dolorem ea quo qui voluptate id placeat, enim atque perspiciatis cupiditate natus consectetur aspernatur quam quas commodi!</p>
         </div>
     </body>
 </html>
