--- a/blog.html
+++ b/blog.html
@@ -50,27 +50,26 @@
                         </div>
                         <div>
                             <label for="">Technologies</label><br>
-                            <input type="checkbox" name="input-blog-checkbox" id="input-blog-checkbox" value="">
-                            <label for="input-blog-checkbox">Node Js</label>
-                            <input type="checkbox" name="input-blog-checkbox" id="input-blog-checkbox" value="">
-                            <label for="input-blog-checkbox">React Js</label>
-                            <input type="checkbox" name="input-blog-checkbox" id="input-blog-checkbox" value="">
-                            <label for="input-blog-checkbox">Next Js</label>
-                            <input type="checkbox" name="input-blog-checkbox" id="input-blog-checkbox" value="">
-                            <label for="input-blog-checkbox">TypeScript</label>
+                            <input type="checkbox" name="input-blog-checkbox1" id="input-blog-checkbox1" value="Node Js">
+                            <label for="input-blog-checkbox1">Node Js</label>
+                            <input type="checkbox" name="input-blog-checkbox2" id="input-blog-checkbox2" value="React Js">
+                            <label for="input-blog-checkbox2">React Js</label>
+                            <input type="checkbox" name="input-blog-checkbox3" id="input-blog-checkbox3" value="Next Js">
+                            <label for="input-blog-checkbox3">Next Js</label>
+                            <input type="checkbox" name="input-blog-checkbox4" id="input-blog-checkbox4" value="TypeScript">
+                            <label for="input-blog-checkbox4">TypeScript</label>
                         </div>
-                        <div>
+                        <div style="margin-top: 12px; margin-bottom: 50px;">
                             <label>Upload Image</label>
                             <div class="input-blog-image-group">
                                 <label for="input-blog-image">
-                                    <p>Upload Image</p>
+                                    <input type="file" id="input-blog-image" />
                                     <img src="image/file.png" />
                                 </label>
-                                <input type="file" id="input-blog-image" hidden />
                             </div>
                         </div>
                         <div class="button-group">
-                            <button>Submit</button>
+                            <button type="submit">Submit</button>
                         </div>
                     </form>
                 </div>
@@ -90,8 +89,8 @@
                     <div class="icon-technology">
                         <i class="fa-brands fa-node-js"></i>
                         <i class="fa-brands fa-react"></i>
-                        <i class="fa-solid fa-diagram-next"></i>
-                        <i class="fa-solid fa-keyboard"></i>
+                        <img src="./image/Nextjs-logo.svg.png" class="next" alt="Next Js">
+                        <img src="./image/Typescript_logo_2020.svg.png" alt="TypeScript">
                     </div>
                     <div class="btn-group">
                         <button class="btn-blog">edit</button>
@@ -110,8 +109,8 @@
                     <div class="icon-technology">
                         <i class="fa-brands fa-node-js"></i>
                         <i class="fa-brands fa-react"></i>
-                        <i class="fa-solid fa-diagram-next"></i>
-                        <i class="fa-solid fa-keyboard"></i>
+                        <img src="./image/Nextjs-logo.svg.png" class="next" alt="Next Js">
+                        <img src="./image/Typescript_logo_2020.svg.png" alt="TypeScript">
                     </div>
                     <div class="btn-group">
                         <button class="btn-blog">edit</button>
@@ -130,8 +129,8 @@
                     <div class="icon-technology">
                         <i class="fa-brands fa-node-js"></i>
                         <i class="fa-brands fa-react"></i>
-                        <i class="fa-solid fa-diagram-next"></i>
-                        <i class="fa-solid fa-keyboard"></i>
+                        <img src="./image/Nextjs-logo.svg.png" class="next" alt="Next Js">
+                        <img src="./image/Typescript_logo_2020.svg.png" alt="TypeScript">
                     </div>
                     <div class="btn-group">
                         <button class="btn-blog">edit</button>
@@ -150,8 +149,8 @@
                     <div class="icon-technology">
                         <i class="fa-brands fa-node-js"></i>
                         <i class="fa-brands fa-react"></i>
-                        <i class="fa-solid fa-diagram-next"></i>
-                        <i class="fa-solid fa-keyboard"></i>
+                        <img src="./image/Nextjs-logo.svg.png" class="next" alt="Next Js">
+                        <img src="./image/Typescript_logo_2020.svg.png" alt="TypeScript">
                     </div>
                     <div class="btn-group">
                         <button class="btn-blog">edit</button>
@@ -170,8 +169,8 @@
                     <div class="icon-technology">
                         <i class="fa-brands fa-node-js"></i>
                         <i class="fa-brands fa-react"></i>
-                        <i class="fa-solid fa-diagram-next"></i>
-                        <i class="fa-solid fa-keyboard"></i>
+                        <img src="./image/Nextjs-logo.svg.png" class="next" alt="Next Js">
+                        <img src="./image/Typescript_logo_2020.svg.png" alt="TypeScript">
                     </div>
                     <div class="btn-group">
                         <button class="btn-blog">edit</button>
