--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
         <link rel="icon" type="image/png" href="./image/emyu.png">
         <title>Contact Form</title>
         <link rel="stylesheet" href="./css/contact.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     </head>
     <body>
         <nav>
@@ -11,19 +12,32 @@
                     <li>
                         <img src="image/logo.png" alt="logo" />
                     </li>
-                    <li>
+                    <li class="item-collapse">
                         <a href="index.html">Home</a>
                     </li>
-                    <li>
+                    <li class="item-collapse">
                         <a href="blog.html">Blog</a>
+                    </li>
+                    <li class="item-collapse">
+                        <a href="testimonial.html">Testimonial</a>
                     </li>
                 </ul>
             </div>
-            <div class="nav-right">
+            <div class="nav-right item-collapse">
                 <a href="contact.html">Contact Me</a>
             </div>
+            <div class="nav-right" id="barsmenu">
+                <button style="background-color: transparent; border: none; cursor: pointer" onclick="openHamburger()">
+                    <i class="fa-2x fa-solid fa-bars"></i>
+                </button>
+            </div>
         </nav>
-
+        <div class="hamburger-nav-container" id="hamburger-nav-container">
+            <a href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html" class="hamburger-active">Contact Me</a>
+            <a href="testimonial.html">Testimonial</a>
+        </div>
         <div class="form-container">
             <form>
                 <div>
@@ -65,5 +79,6 @@
             </form>
         </div>
         <script src="./js/contact.js"></script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
