--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
         <link rel="icon" type="image/png" href="./image/emyu.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         <title>Contact Form</title>
         <link rel="stylesheet" href="./css/contact.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     </head>
     <body>
         <nav>
@@ -24,7 +26,7 @@
                 </ul>
             </div>
             <div class="nav-right item-collapse">
-                <a href="contact.html">Contact Me</a>
+                <a href="contact.html" style="background-color: orangered;">Contact Me</a>
             </div>
             <div class="nav-right" id="barsmenu">
                 <button style="background-color: transparent; border: none; cursor: pointer" onclick="openHamburger()">
